# up2b

./: .eslintrc.cjs  .imgbotconfig  .prettierrc  .stylelintrc.json  LICENSE  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.github/workflows/: nightly.yml  publish.yml
.scripts/: before-build.js  mirror-latest-json.js
docs/images/: list.avif  upload.avif
src/: App.scss  App.tsx  lazy.ts  main.tsx  styles.scss  vite-env.d.ts
src-tauri/: Cargo.toml  before-build.js  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  logger.rs  main.rs  setup.rs
src-tauri/src/config/: mod.rs
src-tauri/src/http/: json.rs  mod.rs  multipart.rs
src-tauri/src/manager/: mod.rs  smms.rs
src-tauri/src/manager/api/: delete.rs  list.rs  mod.rs  upload.rs
src-tauri/src/manager/chevereto/: imgse.rs  imgtg.rs  mod.rs
src-tauri/src/manager/git/: mod.rs
src-tauri/src/util/: mod.rs  time.rs
src-tauri/src/util/image/: compress.rs  mod.rs
src/advance/: index.tsx
src/components/: loading.tsx
src/components/image-card/: index.scss  index.tsx
src/components/title-bar/: index.scss  index.tsx
src/lib/: api.ts  image.ts  index.ts  store.ts
src/pages/list/: index.scss  index.tsx
src/pages/setting/: index.scss  index.tsx  proxy.tsx
src/pages/setting/components/: add.tsx  api.tsx  chevereto.tsx  git.tsx  status.tsx
src/pages/setting/components/api/: auth-method.tsx  delete.tsx  form.tsx  image-list.tsx  index.tsx  upload.tsx
src/pages/upload/: index.scss  index.tsx  uploaded-result.tsx
types/: config.d.ts  http.d.ts  index.d.ts  response.d.ts  upload.d.ts
types/config/: api.d.ts  git.d.ts  index.d.ts
