[package]
name = "up2b"
version = "0.0.0"
description = "图床管理客户端"
authors = ["thepoy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "window-set-title",
  "window-unminimize",
  "window-start-dragging",
  "window-maximize",
  "window-minimize",
  "window-close",
  "window-hide",
  "window-show",
  "window-unmaximize",
  "cli",
  "clipboard-write-text",
  "shell-open",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = [
  "json",
  "socks",
  "stream",
  "multipart",
] }
async-trait = "0.1"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }
log = "0.4"
simplelog = { version = "0.12" }
time = { version = "0.3", features = ['formatting'] }
lazy_static = "1"
toml = "0.8"
dirs = "5"
tokio-util = "0.7"
read-progress-stream = "1"
futures-util = "0.3"
thiserror = "1"
image = { version = "0.24", features = [
  'webp-encoder',
  'avif-encoder',
], optional = true }
regex = "1"
async-recursion = "1"

[dev-dependencies]
env_logger = "0.10"

[features]
compress = ["dep:image"]
# 默认情况下图片解码时的内存占用控制在 512M 以内，no-limits 则无限制，可能导致内存溢出
no-limits = ["compress"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
