[package]
name = "up2b"
version = "0.0.0"
description = "图床管理客户端"
authors = ["thepoy"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0", features = ["json", "socks", "stream", "multipart"] }
async-trait = "0.1"
log = "0.4"
simplelog = { version = "0.12" }
time = { version = "0.3", features = ['formatting'] }
lazy_static = "1"
toml = "0.8"
dirs = "5"
tokio-util = "0.7"
read-progress-stream = "1"
futures-util = "0.3"
thiserror = "2"
image = { version = "0.25", features = ['webp', 'avif'], optional = true }
regex = "1"
async-recursion = "1"
base64 = "0.22"
futures = "0.3"
bytes = "1.5"

tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-cli = "2"

[dev-dependencies]
env_logger = "0.11"

[features]
compress = ["dep:image"]
# 默认情况下图片解码时的内存占用控制在 512M 以内，no-limits 则无限制，可能导致内存溢出
no-limits = ["compress"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
